--- a/css/color.css
+++ b/css/color.css
@@ -22,15 +22,17 @@ button.yes {
   text-align: center;
   font-size: 20px;
   margin: 20px;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+button.yes:hover {
   background-color: blue;
   color: white;
   border: 1px solid blue;
-  border-radius: 10px;
-}
-button.yes:focus {
-  color: blue;
-  background-color: pink;
-  border-color: pink;
+  box-shadow: -2px 5px 10px 5px pink;
+  transition: box-shadow 0.5s;
 }
 button.no {
   width: 80px;
